# EBplus--GUI_for_openEB

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_CN.md
.github/workflows/: macos.yml
algo/analytics/: event_to_video.h  flow_statistics.h  isi_analyzer.h
algo/calibration/: intrinsic.cpp  intrinsic.h
algo/common/: dvs_framer.h  event_packet.h  event_rate_estimator.h  freme.h  kalman_filter.h  kmeans.h  lif_integrator.h  performance_meter.h  periodic_spline.h
algo/common/filter/: angular_lowpass.h  bandpass.h  highpass.h  lowpass.h  median_lowpass.h
algo/cv/: background_mask_filter.h  bandpass_filter.h  cluster_lif.h  corner_detector.h  direction_selective_filter.h  hot_pixel_filter.h  hough_circle_tracker.h  hough_line_tracker.h  line_segment_detector.h  noise_filter.h  object_tracker.h  optical_gyro.h  orientation_filter.h  perspective_undistort.h  sparse_optical_flow.h  xyt_visualizer.h
algo/tests/: CMakeLists.txt  test_file_frame_generator.cpp  test_phase6_common.cpp  test_phase7_cv.cpp  test_phase8_10.cpp  test_playback_e2v.cpp  test_raw_algos.cpp  test_raw_playback.cpp
doc/: compile.md  design.md  gui_optimization.md  systematic_audit.md
gui/: CMakeLists.txt  main_window.cpp  main_window.h
gui/algo_bridge/: algo_backend.cpp  algo_backend.h  algo_bridge.cpp  algo_bridge.h  filter_chain.cpp  filter_chain.h
gui/algo_bridge/backends/: analytics_backends.cpp  analytics_extra_backends.cpp  backend_common.cpp  backend_common.h  backend_factory.cpp  backend_registry.h  cv_backends.cpp  cv_vector_backends.cpp  display_backends.cpp  filter_backends.cpp
gui/app/: camera_controller.cpp  camera_controller.h  file_converter.cpp  file_frame_generator.cpp  file_frame_generator.h  frame_pipeline.cpp  frame_pipeline.h
gui/calibration/: calibration_wizard.cpp  calibration_wizard.h  chessboard_display.cpp  sharpness_dialog.cpp  sharpness_dialog.h  sharpness_metrics.cpp
gui/config/: config_manager.cpp
gui/display/: space_time_display.cpp
gui/exporter/: export_dialog.cpp  exporter_controller.cpp
gui/panels/: abstract_panel.h  algorithms_panel.cpp  algorithms_panel.h  display_panel.cpp  display_panel.h  esp_panel.cpp  file_tools_panel.cpp  file_tools_panel.h  information_panel.h  preprocessing_panel.cpp  roi_panel.cpp  roi_panel.h
gui/recorder/: playback_controller.cpp  playback_controller.h  playback_controls.cpp  playback_controls.h
gui/resources/theme/: base.qss.in
gui/tests/: CMakeLists.txt  test_algo_bridge.cpp  test_config_manager.cpp
gui/widgets/: activity_bar.cpp  activity_bar.h  custom_title_bar.cpp  custom_title_bar.h
openeb/: CMakeLists.txt
openeb/sdk/modules/core/cpp/include/metavision/sdk/core/utils/: mostrecent_timestamp_buffer.h  video_writer.h
openeb/sdk/modules/core/cpp/src/utils/: video_writer.cpp
wiki/: Algorithms.md  GUI-Guide.md
